--- a/index.html
+++ b/index.html
@@ -1,19 +1,271 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-        <title>LTW</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+<html>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<head>
+  <title>Yuk ke Kuningan</title>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 
-    <body>
+  <!-- Css -->
+  <link rel="stylesheet" href="css/style.css">
 
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
-  </html>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body id="home" class="scrollspy">
+  <!-- Navbar -->
+  <div class="navbar-fixed ">
+    <nav class="blue darken-2 ">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="#home" class="brand-logo">YKK</a>
+          <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#about">Abous Us</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <ul class="sidenav" id="mobile-nav">
+    <li><a href="">Abous Us</a></li>
+    <li><a href="">Clients</a></li>
+    <li><a href="">Services</a></li>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Contact Us</a></li>
+
+  </ul>
+  <!-- Akhir Navbar -->
+  <!-- slider -->
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="img/slider/1.png"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+
+      <li>
+        <img src="img/slider/2.png"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+
+      <li>
+        <img src="img/slider/3.png"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+
+      <li>
+        <img src="img/slider/4.png"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+
+  <!-- Akhir Slider -->
+
+  <!-- about us -->
+  <section id="about" class="about scrollspy">
+    <div class="container">
+      <div class="row">
+        <h3 class="center light grey-text text-darken-3"> About Us </h3>
+        <div class="col m6 light">
+          <h5> We Are Profesional</h5>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, adipisci.</p>
+        </div>
+        <div class="col m6 light">
+          <p>Web Development</p>
+          <div class="progress">
+            <div class="determinate" style="width: 50%"></div>
+          </div>
+
+          <p>Mobile App Development</p>
+          <div class="progress">
+            <div class="determinate" style="width: 60%"></div>
+          </div>
+
+          <p>Game Development</p>
+          <div class="progress">
+            <div class="determinate" style="width: 70%"></div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- akhir about -->
+
+  <!-- Our Client -->
+
+  <div id="clients" class="parallax-container scrollspy">
+    <div class="parallax"><img src="img/slider/4.png"></div>
+
+    <div class="container clients">
+      <h3 class=" center light white-text"> Our Client</h3>
+      <div class="row">
+        <div class="col m4 s12 center">
+          <img src="img/clients/gojek.png" alt="" srcset="">
+        </div>
+        <div class="col m4 s12 center">
+          <img src="img/clients/tokopedia.png" alt="" srcset="">
+        </div>
+        <div class="col m4 s12 center">
+          <img src="img/clients/traveloka.png" alt="" srcset="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Akhir Our Client -->
+
+  <!-- Our Service -->
+  <section id="services" class="services grey lighten-3 scrollspy">
+    <div class="container">
+      <div class="row">
+        <h3 class="light center grey-text text-darken-3">Our Services</h3>
+        <div class="col m4 s12">
+          <div class="card-panel center">
+            <i class="material-icons medium">desktop_mac</i>
+            <h5>Web Development</h5>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, impedit?</p>
+          </div>
+        </div>
+
+        <div class="col m4 s12">
+          <div class="card-panel center">
+            <i class="material-icons medium">developer_mode</i>
+            <h5>Mobile Development</h5>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, impedit?</p>
+          </div>
+        </div>
+
+        <div class="col m4 s12">
+          <div class="card-panel center">
+            <i class="material-icons medium">games</i>
+            <h5>Game Development</h5>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, impedit?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Service -->
+
+  <!-- Portfolio -->
+  <section id="portfolio" class="portfolio scrollspy">
+    <div class="container">
+      <h3 class="light center grey-text text-darken-3">Portfolio</h3>
+      <div class="row">
+        <div class="col m3 s12">
+          <img src="img/portfolio/1.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/2.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/3.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/4.png" class="responsive-img materialboxed">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col m3 s12">
+          <img src="img/portfolio/1.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/2.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/3.png" class="responsive-img materialboxed">
+        </div>
+        <div class="col m3 s12">
+          <img src="img/portfolio/4.png" class="responsive-img materialboxed">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Akhir Portfolio -->
+
+  <!-- contact as -->
+  <section id="contact" class="contact lighten-3 grey scrollspy">
+    <div class="container">
+      <h3 class="light center grey-text text-darken-3">Contact As</h3>
+      <div class="row">
+        <div class="col m5 s12">
+          <div class="card-panel blue darken-2 center white-text">
+            <i class="material-icons">email</i>
+            <h5>Contact</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, consequatur.</p>
+          </div>
+          <ul class="collection with-header">
+            <div class="li collection-header"><h4>Our Officce</h4></div>
+            <li class="collection-item">Yuk Ke Kuningan</li>
+            <li class="collection-item">Jl. Kemuning Raya Taman Yasmin No.29, Bogor</li>
+            <li class="collection-item">West Java, Indonesia</li>
+          </ul>
+        </div>
+        <div class="col m7 s12">
+          <form >
+            <div class="card-panel">
+              <h5>Pleas fill out this form</h5>
+              <div class="input-field">
+                <input type="text" name="name" id="name" required class="validate">
+                <label for="name">Name</label>
+              </div>
+              <div class="input-field">
+                  <input type="email" name="email" id="email" class="validate">
+                  <label for="email">Email</label>
+                </div>
+                <div class="input-field">
+                    <input type="tel" name="phone" id="phone">
+                    <label for="name">Phone Number</label>
+                  </div>
+                  <div class="input-field">
+                      <textarea name="message" id="message" class="materialize-textarea"></textarea>
+                      <label for="message">Message</label>
+                    </div>
+
+                  <button type="submit" class="btn blue darken-2">SEND</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- akhir contact as -->
+
+  <!-- Footer -->
+  <footer class=" blue darken-2 white-text center">
+    <p class="flow-text">Yuk Ke kuningan. Copyrigt 2019.</p>
+  </footer>
+<!-- Akhir Footer -->
+
+
+
+  <!--JavaScript at end of body for optimized loading-->
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
